[gd_scene load_steps=11 format=3 uid="uid://b2dcw5wt6rtiu"]

[ext_resource type="PackedScene" uid="uid://1rjwlen2www6" path="res://art/player.glb" id="1"]
[ext_resource type="Script" path="res://Player/Player.gd" id="2"]
[ext_resource type="FontFile" uid="uid://bvlcg00nw25h6" path="res://fonts/Montserrat-Medium.ttf" id="3"]

[sub_resource type="SphereShape3D" id="1"]
radius = 0.987302

[sub_resource type="CylinderShape3D" id="2"]
height = 0.386489
radius = 1.19045

[sub_resource type="CylinderShape3D" id="6"]
height = 0.0886721
radius = 0.895762

[sub_resource type="Animation" id="3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Character:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Character:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="4"]
resource_name = "float"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Character:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 0.7, 1.2),
"transitions": PackedFloat32Array(0.466516, 2.14355, 1),
"update": 0,
"values": [Vector3(0.164, 0.24, 0), Vector3(0.164, 0.66, 0), Vector3(0.164, 0.35, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Character:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.5, 1.2),
"transitions": PackedFloat32Array(0.466516, 2.14355, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(8, 0, 0), Vector3(-9, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4ikrd"]
_data = {
"RESET": SubResource("3"),
"float": SubResource("4")
}

[sub_resource type="FontFile" id="5"]
fallbacks = Array[Font]([ExtResource("3")])
cache/0/32/0/ascent = 0.0
cache/0/32/0/descent = 0.0
cache/0/32/0/underline_position = 0.0
cache/0/32/0/underline_thickness = 0.0
cache/0/32/0/scale = 1.0
cache/0/32/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/60/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/70/0 = Vector2(0, 0)
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/60/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/70/0 = Vector2(0, 0)
cache/0/50/0/ascent = 0.0
cache/0/50/0/descent = 0.0
cache/0/50/0/underline_position = 0.0
cache/0/50/0/underline_thickness = 0.0
cache/0/50/0/scale = 1.0
cache/0/50/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/60/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/70/0 = Vector2(0, 0)
cache/0/60/0/ascent = 0.0
cache/0/60/0/descent = 0.0
cache/0/60/0/underline_position = 0.0
cache/0/60/0/underline_thickness = 0.0
cache/0/60/0/scale = 1.0
cache/0/60/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/60/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/60/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/60/0/kerning_overrides/60/0 = Vector2(0, 0)
cache/0/60/0/kerning_overrides/70/0 = Vector2(0, 0)
cache/0/70/0/ascent = 0.0
cache/0/70/0/descent = 0.0
cache/0/70/0/underline_position = 0.0
cache/0/70/0/underline_thickness = 0.0
cache/0/70/0/scale = 1.0
cache/0/70/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/70/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/70/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/70/0/kerning_overrides/60/0 = Vector2(0, 0)
cache/0/70/0/kerning_overrides/70/0 = Vector2(0, 0)

[node name="Player" type="CharacterBody3D" groups=["player"]]
collision_mask = 7
script = ExtResource("2")

[node name="Pivot" type="Node3D" parent="."]

[node name="Character" parent="Pivot" instance=ExtResource("1")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.176828, 0, -0.0220981)
shape = SubResource("1")

[node name="MobDetector" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0133276, 0)
collision_layer = 16
collision_mask = 2
monitorable = false

[node name="CollisionShape2" type="CollisionShape3D" parent="MobDetector"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.162579, 0.0807966, -0.0136797)
shape = SubResource("2")

[node name="PlayerDetector" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.159369, 0.242325, 0)
collision_layer = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerDetector"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.22049, 0)
shape = SubResource("6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4ikrd")
}
autoplay = "float"

[node name="VisibleOnScreenNotifier3D" type="VisibleOnScreenNotifier3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.205145, 0.305717, 0)
aabb = AABB(-1, -0.573175, -1, 2, 1.14635, 2)

[node name="PlayerName" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, -0.165605, 3.10011, 0)
modulate = Color(0.0235294, 0.65098, 0.0196078, 1)
text = "Player1"
font = SubResource("5")
font_size = 70

[node name="AudioStreamPlayer" type="AudioStreamPlayer3D" parent="."]

[node name="UpdateTimer" type="Timer" parent="."]
wait_time = 0.07
autostart = true

[connection signal="body_entered" from="MobDetector" to="." method="_on_MobDetector_body_entered"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier3D" to="." method="_on_VisibilityNotifier_screen_exited"]
